--- a/master-deployment.yaml
+++ b/master-deployment.yaml
@@ -35,5 +35,5 @@ spec:
     spec:
       containers:
         - name: second-node
-          image: kittitnun/node_kub
+          image: kittitnun/65130695ct665
 
